--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "3.6",
     "ky": "^1.7.2",
     "lucide-react": "^0.456.0",
+    "mpegts.js": "^1.7.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
